<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_restaurantname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/txt_restaurant"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_restaurantname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:autoText="false"
            android:text=" " />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_invoiceno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/txt_invoiceno"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_invoiceno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:textSize="16sp" />

    </LinearLayout>
    
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/lbl_createddate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:textStyle="bold"
             android:text="@string/txt_createddate"
             android:textSize="16sp" />

         <TextView
             android:id="@+id/txt_createddate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="30dp"
             android:layout_weight="1"
             android:textSize="16sp" />

     </LinearLayout>

</LinearLayout>
